# my-starter-kit

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  docker-compose.yml  github_mcp.README.md
.claude/: settings.json
.claude/agents/: sre-oncall-assistant.md
.claude/commands/: deploy-check.md  incident.md  new-service.md
.claude/scripts/: lint_check.py  slack_notify.py
ci-cd/.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml
ci-cd/argocd/: app-of-apps.yaml  application.yaml
kubernetes/base/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  service.yaml
kubernetes/monitoring/prometheus/: servicemonitor.yaml  values.yaml
kubernetes/ray-cluster/: ray-cluster.yaml  ray-serve.yaml
monitoring/grafana/dashboards/: api-overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yaml
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/rules/: api-alerts.yaml  slo.yaml
ray/: Dockerfile.ray  requirements.txt  serve_app.py  vellum_client.py
scripts/: port-forward.sh  setup-local.sh  teardown.sh
services/api/: Dockerfile  pyproject.toml  requirements.txt
services/api/app/: config.py  main.py
services/api/app/middleware/: metrics.py
services/api/app/models/: item.py
services/api/app/routers/: health.py  items.py
services/api/tests/: test_health.py
terraform/environments/aws/: main.tf  terraform.tfvars.example  variables.tf
terraform/modules/ecr/: main.tf
terraform/modules/eks/: main.tf  outputs.tf  variables.tf
